...
    String title = "Edit cluster";
    List<Widget> checkButton = [_buildClusterPopUpButton()];

    if (widget._new) {
      title = "Add new cluster";
      checkButton.add(IconButton(
        key: Key("saveCluster"),
        icon: Icon(Icons.check_circle, size: 35, color: Colors.white),
        onPressed: () {
          var current = _formKey.currentState;
          if (current != null && current.validate()) {
            current.save();
            log("Saving new cluster ${widget._cluster}");
...
      TextButton(
          style: TextButton.styleFrom(
            backgroundColor: widget._cluster.running ? Color(0xff4d4d4d) : Color(0xffcc8d00),
            foregroundColor: Colors.white,
          ),
          onPressed: () async => _run(),
          key: Key("run"),
          child: indicator)
    ]);

    List<Widget> widgets = [_buildClusterCard()];
    if (widget._cluster.children.isNotEmpty) {
      widgets.add(_buildClusterChildren());
...
              title: Text(title),
              actions: checkButton,
            ),
            floatingActionButton: widget._new
                ? null
                : FloatingActionButton(
                    key: Key("addChild"),
                    backgroundColor: Color(0xff616161),
                    foregroundColor: Color(0xffc7c7c7),
                    onPressed: () {
                      var current = _formKey.currentState;
                      if (current != null && current.validate()) {
                        current.save();
...
                key: _formKey,
                child: Column(
                  children: <Widget>[
                    TextFormField(
                      decoration: const InputDecoration(
                        icon: Icon(Icons.label),
                        labelText: 'name',
                      ),
                      key: Key("name"),
                      onSaved: (String? value) {
                        if (value != null) {
                          widget._cluster.name = value;
                        }
                      },
                      initialValue: widget._cluster.name,
                    ),
                    TextFormField(
                      decoration: const InputDecoration(
                        icon: Icon(Icons.person),
                        hintText: 'username',
                        labelText: 'username',
                      ),
                      key: Key("username"),
                      inputFormatters: [FilteringTextInputFormatter.deny(RegExp("[ ]"))],
                      onSaved: (String? value) {
                        if (value != null) {
...
                      onEditingComplete: validate,
                    ),
                    TextFormField(
                      decoration: const InputDecoration(
                        icon: Icon(Icons.computer),
                        hintText: 'Server domain',
                        labelText: 'server',
                      ),
                      inputFormatters: [FilteringTextInputFormatter.deny(RegExp("[ ]"))],
                      key: Key("server"),
                      onSaved: (String? value) {
                        if (value != null) {
                          widget._cluster.host = value;
...
                    ),
                    TextFormField(
                      keyboardType: TextInputType.number,
                      decoration: const InputDecoration(
                        icon: Icon(Icons.local_airport),
                        hintText: 'SSH server port',
                        labelText: 'port',
                      ),
                      key: Key("port"),
                      onSaved: (String? value) {
                        widget._cluster.port = int.parse(value ?? "");
                      },
                      initialValue: (widget._cluster.port).toString(),
...
