...
              } else {
                _server.start(_base);
              }
            });
          },
          child: Text(
            _server.isRunning() ? "Stop server" : "Start server",
          ))
    ];

    if (_server.isRunning()) {
      String url = "http://$_ip:${_server.socket}";

...
