...
    }

    return Scaffold(
        appBar: AppBar(
          leading: IconButton(
            icon: Icon(Icons.arrow_back),
            key: Key("back"),
            onPressed: () {
              Navigator.pop(context);
            },
          ),
          title: Text(_cluster.running ? "Running on ${_cluster.name}" : "Last run on ${_cluster.name}"),
        ),
...
